# cpp-xpx-storage-user-app

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile-Linux-orig  Dockerfile-Linux-x64  Dockerfile-Windows-x64  README.md  tool.desktop
.ci/: Dockerfile  Jenkinsfile
.ci/linux/: Dockerfile
.ci/windows/: Dockerfile
UserApp/: Account.cpp  Account.h  AddDownloadChannelDialog (copy).ui  AddDownloadChannelDialog.cpp  AddDownloadChannelDialog.h  AddDownloadChannelDialog.ui  AddDriveDialog.cpp  AddDriveDialog.h  AddDriveDialog.ui  AddStreamAnnouncementDialog.cpp  AddStreamAnnouncementDialog.h  AddStreamAnnouncementDialog.ui  AddStreamRefDialog.cpp  AddStreamRefDialog.h  BlockchainEngine.cpp  BlockchainEngine.h  CMakeLists.txt  CachedReplicator.h  CancelModificationDialog.cpp  CancelModificationDialog.h  CancelModificationDialog.ui  ChannelInfoDialog.cpp  ChannelInfoDialog.h  ChannelInfoDialog.ui  CloseChannelDialog.cpp  CloseChannelDialog.h  CloseDriveDialog.cpp  CloseDriveDialog.h  Common.h  ContractDeploymentData.h  ContractManualCallData.h  CustomLogsRedirector.cpp  CustomLogsRedirector.h  DeployProgressPanel.cpp  DeployProgressPanel.h  DeployProgressPanel.ui  Diff.cpp  Diff.h  DiffTableModel.cpp  DiffTableModel.h  (+106 more)
UserApp/Dialogs/: AddDownloadChannelDialog.cpp  AddDownloadChannelDialog.h  AddDownloadChannelDialog.ui  AddDriveDialog.cpp  AddDriveDialog.h  AddDriveDialog.ui  AddDriveStreamDialog.cpp  AddDriveStreamDialog.h  AddDriveStreamDialog.ui  AddStreamAnnouncementDialog.cpp  AddStreamAnnouncementDialog.h  AddStreamAnnouncementDialog.ui  AddStreamRefDialog.cpp  AddStreamRefDialog.h  AddStreamRefDialog.ui  AskDriveWizardDialog.cpp  AskDriveWizardDialog.h  AskDriveWizardDialog.ui  CancelModificationDialog.cpp  ChannelInfoDialog.cpp  ChannelInfoDialog.h  CheckReplicatorEndpointDialog.cpp  CheckReplicatorEndpointDialog.h  CloseChannelDialog.cpp  CloseDriveDialog.cpp  CloseDriveDialog.h  ComfirmLinkDialog.cpp  ComfirmLinkDialog.h  ComfirmLinkDialog.ui  ConfirmLinkDialog.cpp  ConfirmLinkDialog.h  ConfirmLinkDialog.ui  DownloadPaymentDialog.cpp  DownloadPaymentDialog.h  DriveInfoDialog.cpp  DriveInfoDialog.h  EditDialog.cpp  EditDialog.h  ModalDialog.h  ModifyProgressPanel.cpp  (+25 more)
UserApp/DialogsStreaming/: StreamingPanel.cpp  StreamingPanel.h  StreamingPanel.ui  StreamingView.cpp  StreamingView.h  StreamingView.ui
UserApp/Engines/: BlockchainEngine.cpp  BlockchainEngine.h  StorageEngine.cpp  StorageEngine.h  TransactionsEngine.cpp  TransactionsEngine.h
UserApp/Entities/: Account.cpp  Account.h  CachedReplicator.cpp  CachedReplicator.h  DataInfo.cpp  DataInfo.h  DownloadChannel.cpp  DownloadChannel.h  DownloadInfo.cpp  DownloadInfo.h  Drive.cpp  Drive.h  EasyDownloadInfo.cpp  EasyDownloadInfo.h  Settings.cpp  Settings.h  StreamInfo.cpp  StreamInfo.h
UserApp/ErrorCodeTranslator/: ErrorCodeTranslator.cpp  ErrorCodeTranslator.h  ErrorCodeTranslator.txt
UserApp/Models/: DiffTableModel.cpp  DiffTableModel.h  DownloadsTableModel.cpp  DownloadsTableModel.h  DriveContractModel.cpp  DriveContractModel.h  DriveTreeModel.cpp  DriveTreeModel.h  EasyDownloadTableModel.cpp  EasyDownloadTableModel.h  FsTreeTableModel.cpp  FsTreeTableModel.h  Model.cpp  Model.h  ReplicatorTreeModel.cpp  ReplicatorTreeModel.h
UserApp/ObsController/: CMakeLists.txt  Logs.h  ObsController.cpp  ObsController.h  main.cpp
UserApp/SignalEmitters/: DialogSignals.cpp  DialogSignals.h
ci/: Dockerfile  README.md  copyDeps.sh
notes.rtfd/: TXT.rtf
